# Canvas_Course_Downloads

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/canvas_course_downloads/: __init__.py  cli.py  models.py  scraper.py
tests/: test_cli.py  test_scraper.py
