[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvas-course-downloads"
version = "0.1.0"
description = "Download all files from your Canvas LMS courses"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
canvas-download = "canvas_course_downloads.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
